infrastructure/kube/keep-test/eth-dashboard-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: eth-dashboard-http
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.allow-http: "true"
spec:
  backend:
    # This assumes service eth-dashboard-http exists and routes to healthy endpoints
    serviceName: eth-dashboard-http
    servicePort: 8080
